# lemuri-workspace

./: CMakeLists.txt
src/: CMakeLists.txt  application.qrc  lemuricompositor.cpp  lemuricompositor.h  main.cpp  qmlcompositor.cpp  qmlcompositor.h  surfaceitem.cpp  surfaceitem.h  viewoutput.cpp  viewoutput.h
src/qml/: WindowContainer.qml  compositor.js  main.qml
